# AllDayChessBot

./: README.md  main.py  pyproject.toml
src/: bot.py  utilities.py
src/extensions/: general.py
